# vector-search-engine

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  init.sql  pyproject.toml  settings.toml
.github/workflows/: test.yaml
.streamlit/: config.toml
src/: Dockerfile.api  Dockerfile.frontend  Dockerfile.pg  app.py  main.py  search.py
src/client/: api.py
src/data/: __init__.py  data.py
src/database/: engine.py  ingress.py  models.py  query.py  schema.py  tables.py
src/embeddings/: engine.py
src/graphql/controller/: mutations.py  queries.py
src/graphql/core/: __init__.py  mutations.py  queries.py
src/graphql/schema/: products.py
src/templates/: add_product.txt  similarity_search.txt
tests/unit/: test_client.py  test_data.py  test_embeddings.py
