[tool.poetry]
name = "vector-search-engine"
version = "0.1.0"
description = "An AI powered vector search engine for finding similar content"
authors = ["christian nickerson <christian_nickerson@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
kaggle = "1.5.13"
pandas = "2.0.2"
dynaconf = "3.1.12"
sqlalchemy = "2.0.17"


[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
black = "23.3.0"
isort = "5.12.0"
mypy = "1.1.1"
pre-commit = "3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="black"
