[tool.poetry]
name = "vector-search-engine"
version = "0.1.0"
description = "A vector search engine for searching for Nike products using natural language"
authors = ["christian nickerson <christian_nickerson@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
kaggle = "1.5.13"
pandas = "2.0.2"
dynaconf = "3.1.12"
sqlalchemy = "2.0.17"
fastapi = "0.98.0"
pydantic = "1.10.10"


[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
black = "23.3.0"
isort = "5.12.0"
mypy = "1.1.1"
pre-commit = "3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile="black"

[tool.mypy]
python_version = "3.11"
